# reproducible-research

./: .dockerignore  .gitignore  README.md  _quarto.yml  paper.qmd  pyproject.toml  reproducible_setup.sh
.devcontainer/: Dockerfile  devcontainer.json  setup_env.sh  test_devcontainer_setup.sh
