[project]
name = "reproducible-research"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk" }
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "BSD-3-Clause" }
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
